--- a/src/employeeservice/build.gradle
+++ b/src/employeeservice/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '2.7.8'
-	id 'io.spring.dependency-management' version '1.1.0'
+    id 'java'
+    id 'org.springframework.boot' version '2.7.8'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'com.example'
@@ -9,31 +9,38 @@ version = '1.0'
 sourceCompatibility = '17'
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 ext {
-	offlineCompile = new File("$buildDir/output/lib")
+    offlineCompile = new File("$buildDir/output/lib")
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.8'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.8'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.8'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.8'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.8'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.8'
 
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
+
+    // slf4j dependency
+    implementation 'org.slf4j:slf4j-api:2.0.6'
+    implementation 'ch.qos.logback:logback-classic:1.4.5'
+    implementation 'ch.qos.logback.contrib:logback-json-classic:0.1.5'
+    implementation 'ch.qos.logback.contrib:logback-jackson:0.1.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
 }
 
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
 
 // This to cache dependencies during Docker image building. First build will take time.
 // Subsequent build will be incremental.
 task downloadRepos(type: Copy) {
-	from configurations.compileClasspath
-	into offlineCompile
-	from configurations.compileClasspath
-	into offlineCompile
+    from configurations.compileClasspath
+    into offlineCompile
+    from configurations.compileClasspath
+    into offlineCompile
 }
