--- a/src/employeeservice/build.gradle
+++ b/src/employeeservice/build.gradle
@@ -23,12 +23,9 @@ dependencies {
 
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 
-    // slf4j dependency
-    implementation 'org.slf4j:slf4j-api:2.0.6'
-    implementation 'ch.qos.logback:logback-classic:1.4.5'
-    implementation 'ch.qos.logback.contrib:logback-json-classic:0.1.5'
-    implementation 'ch.qos.logback.contrib:logback-jackson:0.1.5'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
+    implementation 'org.slf4j:slf4j-api:1.7.26'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'net.logstash.logback:logstash-logback-encoder:5.2'
 }
 
 
