--- a/src/organizationservice/src/main/resources/application.yaml
+++ b/src/organizationservice/src/main/resources/application.yaml
@@ -19,3 +19,15 @@ feign:
 
 springdoc:
   show-actuator: true
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics, prometheus
+  metrics:
+    enable:
+      all: true
+    tags:
+      application: employeeservice
